# betatp

./: .codequality.yml  .coverage  .env.example  .gitignore  .vercelignore  Dockerfile  KONTYNUACJA.md  KONTYNUACJA_2026-06-26_sesja2.md  KONTYNUACJA_2026-06-26_sesja3.md  KONTYNUACJA_2026-06-26_sesja4.md  KONTYNUACJA_2026-06-27_sesja5.md  Makefile  PLAN-140-ITERACJI.md  README.md  TUNNEL_INFO.md  alembic.ini  backtest_results.json  config.py  docker-compose.yml  index.html  pyproject.toml  render.yaml  requirements.txt  start.sh  vercel.json
api/: auth.py  main.py  schemas.py
backtest/: engine.py
coupons/: daily.json
data/: backtest_v12.json  backtest_v12_bets.csv  backtest_v14.json  backtest_v14_bets.csv  backtest_v4.json  backtest_v4_bets.csv  loader.py  matches_with_odds_sample.csv  matches_with_odds_stats.json  matches_with_weather.parquet  models.py  quality.py  schema.py  weather_features.parquet  weather_raw.parquet  weather_raw_cache.json
db/: import.py  schema.sql
docs/: API.md  COUPON_FORMAT.md  PLAN_v9_world_class.md  SPEC_v8.md
engine/: constants.py  coupon.py  coupon_ranker.py  coupon_system.py  daily_coupon.py  elo.py  elo_runner.py  feature_builder.py  features.py  live_engine.py  monte_carlo.py  prediction_service.py  predictor.py  value_detector.py
fragments/: cards_fragment.html  hero_fragment.html  hero_preview.html  picks_fragment.html
frontend/: demo.html  index.html  index.html.v6_backup  manifest.json  sw.js
ml/: calibration.py  champion_stack.py  dataset.py  ensemble.py  lgbm_model.py  model_loader.py
scripts/: backtest_v4.py  (+18 more)
(+345 files in other folders)
