[project]
name = "betatp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "scikit-learn>=1.5",
    "joblib>=1.4",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["betatp*", "api*", "data*", "engine*", "ml*", "value*", "backtest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=. --cov-report=term-missing -q"

[tool.coverage.run]
omit = ["tests/*", "*/migrations/*"]
